Cache maven dependency, remove install via apt.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,9 +21,7 @@ jobs:
         with:
           distribution: 'corretto'
           java-version: '25'
-
-      - name: Install Maven
-        run: apt update && apt-get install -y maven
+          cache: 'maven'
 
       - name: Test
         run: mvn -B verify
